--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <header>
         <!-- Navbar -->
         <nav>
-            <div class="navbar">
-                <img src="./assets/white-logo.png" alt="">
-                <div class="menu">
+                <div class="logo-menu">
+                    <img src="./assets/white-logo.png" alt="">
+                    <div class="container">
+                        
+                    </div>
                     <ul>
                         <li><a href="#">Apps</a></li>
                         <li><a href="#">DAO</a></li>
@@ -21,16 +23,23 @@
                         <li><a href="#">Token</a></li>
                         <li><a href="#">Contributors</a></li>
                     </ul>
-                    <div class="btn"><button>Buy 1 Token</button></div>
                 </div>
-            </div>
+                <div class="btn">
+                    <button>Buy 1 Token</button>
+                </div>
         </nav>
     </header>
     <!-- Main Section -->
     <section class="main-section">
-        <h1>Lets build a better tomorrow, together.</h1>
-        <p>Buy 1 Token. Join the DAO. Change the world</p>
-        <button>Request Early Access</button>
+        <div class="theme">
+            <div class="theme-content">
+                <h1>Lets build a better <br> tomorrow, together.</h1>
+                <p>Buy 1 Token. Join the DAO. Change the world</p>
+            </div>
+            <div class="theme-btn">
+                <button>Request Early Access</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
